# msc-2024-gry_wektorowe

./: .gitignore  .gitmodules  LICENSE.txt  README.md  asteroids.html  asteroids.js  asteroids.wasm  meson.build
.github/workflows/: deploy.yml
cross/: emscripten.txt
html/: shell.html
shaders/: debug.glsl  lines.glsl  offscreen.glsl  offscreen0.glsl  offscreen1.glsl  offscreen2.glsl  offscreen3.glsl  offscreen_v2.glsl  triangle.glsl
src/: main.c  sokol.c  utility.c  utility.h
src/ast/: actor.c  actor.h  asteroid.c  asteroids.c  debug.c  debug.h  object.c  object.h  pipelines.c  pipelines.h  ship.c  ship.h  state.c  state.h
src/asteroids/: asteroids.c  ship.c  ship.h
